# SDCND

./: .gitignore
Term1_Computer_Vision_and_Deep_Learning/: .gitignore
Term1_Computer_Vision_and_Deep_Learning/01_Project_Finding_LaneLines/: .gitignore  P1-Copy1.ipynb  P1-writeup-for-README.ipynb  README.md
Term1_Computer_Vision_and_Deep_Learning/02_Project_Traffic_Sign_Classifier/: .gitignore  README.md  Traffic_Sign_Classifier-Copy1.ipynb  Traffic_Sign_Classifier.html  Traffic_Sign_Classifier.ipynb  writeup_traffic_signs_classifier.md  writeup_traffic_signs_classifier.md.ipynb
Term1_Computer_Vision_and_Deep_Learning/02_Project_Traffic_Sign_Classifier/saved_model/: checkpoint  my_LeNet.ckpt.data-00000-of-00001  my_LeNet.ckpt.index  my_LeNet_L1_D10.ckpt.data-00000-of-00001  my_LeNet_L1_D10.ckpt.index  my_LeNet_L1_D10_2.ckpt.data-00000-of-00001  my_LeNet_L1_D10_2.ckpt.index
Term1_Computer_Vision_and_Deep_Learning/03_Project-Behavioral-Cloning/: .gitignore  Behavioral_Cloning_Test.ipynb  Behavioral_Cloning_Test_LeNet.py  README.md  batch_generate.py  model.py  model2.py  test2.h5  writeup_Behavioral_Cloning.md
Term1_Computer_Vision_and_Deep_Learning/03_Project-Behavioral-Cloning/data_sample/: driving_log.csv
Term1_Computer_Vision_and_Deep_Learning/03_Project-Behavioral-Cloning/test1/: test1-1.h
Term1_Computer_Vision_and_Deep_Learning/04_Project-Advanced_Lane_Finding/: .gitignore  README.md  Writeup_project_Advanced_Lane_Finding_submit.md  pipeline_test.ipynb  temp.ipynb
Term1_Computer_Vision_and_Deep_Learning/04_Project-Advanced_Lane_Finding/examples/: example.ipynb
Term1_Computer_Vision_and_Deep_Learning/05_Project-Vehicle_Detection_and_Tracking/: .gitignore  Project - Vehicle Detection and Tracking.ipynb  Project - Vehicle Detection and Tracking_Submit.ipynb  README.md  lesson_functions.py  preparation.ipynb  writeup_submit_vehicle_detection.md
Term2_Robotics_Sensor_Fusion/01_Project_Extended_Kalman_Filter/: .gitignore  README.md
Term2_Robotics_Sensor_Fusion/01_Project_Extended_Kalman_Filter/src/: FusionEKF.cpp  kalman_filter.cpp  main.cpp  tools.cpp
Term2_Robotics_Sensor_Fusion/02_Project_Unscented_Kalman_Filter/: .gitignore  README.md  test_result.txt
Term2_Robotics_Sensor_Fusion/02_Project_Unscented_Kalman_Filter/99_Lessons/: lesson_code.cpp
Term2_Robotics_Sensor_Fusion/02_Project_Unscented_Kalman_Filter/src/: tools.cpp  tools.h  ukf.cpp  ukf.h
Term2_Robotics_Sensor_Fusion/03_Project_Particle_Filter-Kidnapped_Vehicle/: .gitignore  README.md
Term2_Robotics_Sensor_Fusion/04_Project_PID-Control/: .gitignore  README.md  Reflection_PID_control_project.md  path.txt
Term2_Robotics_Sensor_Fusion/04_Project_PID-Control/src/: main.cpp
Term2_Robotics_Sensor_Fusion/05_Project_MPC_Control/: .gitignore  README.md  Reflection_MPC_control_project.md
Term3_Path_Planning_System_Integration/: .gitignore
Term3_Path_Planning_System_Integration/01_Project_Path_Planning/: .gitignore  Reflection_path_planning_project.md  temp_path.txt
Term3_Path_Planning_System_Integration/01_Project_Path_Planning/artificial_potential_field_test/CS485_PFP/src_org/CppManipPFP/: CMakeLists.txt
Term3_Path_Planning_System_Integration/01_Project_Path_Planning/artificial_potential_field_test/CS485_PFP/src_org/CppManipPFP/src/: ManipPlanner.cpp  ManipPlanner.hpp
Term3_Path_Planning_System_Integration/03_Project_Functional_Safety_of_a_Lane_Assistance_System/: .gitignore  01_SafetyPlan_LaneAssistance_Template.docx  02_HazardAnalysisAndRiskAssessment_Template.xlsx  README.md  ~$_FunctionalSafetyConcept_LaneAssistance_Template.docx
(+108 files in other folders)
